force-app/main/default/main/default/objects/Movie__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>