force-app/main/default/main/default/objects/Movie__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <label>Thumbnail</label>
    <required>true</required>
    <type>Url</type>
</CustomField>