force-app/main/default/main/default/objects/Movie__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9:00 AM - 11:30 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM - 2:30 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM - 5:30 PM</fullName>
            </value>
            <value>
                <fullName>6:00 PM - 8:30 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>