force-app/main/default/main/default/objects/Movie__c/validationRules/can_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>can_be_null</fullName>
    <active>true</active>
    <description>Movie name cannot be null</description>
    <errorConditionFormula>Len(Name)&lt;1</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Movie Name cannot be null</errorMessage>
</ValidationRule>