force-app/main/default/main/default/objects/Movie__c/validationRules/Special_character_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Special_character_restriction</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( Director__c,&quot;[a-zA-Z]*&quot; ) )</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Special Characters and Numbers are not allowed.</errorMessage>
</ValidationRule>