force-app/main/default/main/default/objects/Movie__c/validationRules/valid_length_only.validationRule-meta.xml
<ValidationRule>
    <fullName>valid_length_only</fullName>
    <active>true</active>
    <description>user can insert only valid movie length</description>
    <errorConditionFormula>NOT(REGEX(Length__c,&quot;[([0-9]h [0-6][0-0]m)]*&quot;))</errorConditionFormula>
    <errorDisplayField>Length__c</errorDisplayField>
    <errorMessage>user can insert only valid movie length like 2h 30m</errorMessage>
</ValidationRule>